--- a/php/composer.json
+++ b/php/composer.json
@@ -11,7 +11,7 @@
         "mews/captcha": "^2.1",
         "laravel/socialite": "^2.0",
         "socialiteproviders/weixin": "3.0.*",
-        "predis/predis": "1.0.*"
+        "predis/predis": "^1.1"
 
     },
     "require-dev": {
