用户资料修改

--- a/php/.env
+++ b/php/.env
@@ -3,7 +3,7 @@ APP_KEY=base64:4IgTbtwvozDVo4DTaTEZME8n64yLSjAvdB+VkIj/OsA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://www.weixin_laravel.com
-
+assets=http://www.weixin_laravel.com
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
