--- a/php/composer.json
+++ b/php/composer.json
@@ -10,7 +10,7 @@
         "barryvdh/laravel-ide-helper":"dev-master",
         "mews/captcha": "^2.1",
         "laravel/socialite": "^2.0",
-        "intervention/image": "^2.3",
+        "intervention/image": "2.3.*",
         "socialiteproviders/weixin": "3.0.*",
         "predis/predis": "^1.1"
 
