--- a/php/composer.json
+++ b/php/composer.json
@@ -12,7 +12,8 @@
         "laravel/socialite": "^2.0",
         "intervention/image": "2.3.*",
         "socialiteproviders/weixin": "3.0.*",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "latrell/alipay": "dev-master"
 
     },
     "require-dev": {
