--- a/php/composer.json
+++ b/php/composer.json
@@ -14,8 +14,8 @@
         "socialiteproviders/weixin": "3.0.*",
         "predis/predis": "^1.1",
         "latrell/alipay": "dev-master",
-        "simplesoftwareio/simple-qrcode": "1.3.*"
-
+        "simplesoftwareio/simple-qrcode": "1.3.*",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
